[package]
name = "ihex-merge"
authors = ["JD Brossillon <jdam.github@gmail.com>"]
repository = "https://github.com/JDRobotter/ihex-merge/"
readme = "README.md"
keywords = ["ihex", "intel", "hex", "merge", "cli", "tool"]

version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ihex = "3.0.0"
